hphp/test/zend/good/tests/classes/interface_method_private.php.expectf

Fatal error: Access type for interface method must be omitted in %s/interface_method_private.php on line 5
